# freelance-website

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker.env  main.py  pyproject.toml
freelance_website/: config.py  utils.py
freelance_website/controllers/: auth.py  job.py  user.py
freelance_website/dependencies/: ai.py  auth.py  database.py
freelance_website/models/: __init__.py  abstract.py  job.py  token.py  user.py
freelance_website/routes/: api.py  auth.py  docs.py  job.py  ping.py  user.py
freelance_website/static/: price_suggestion_model  tfidf_vectorizer.pkl
notebooks/: generate_reports_experiment.ipynb  preprocess_upwork_data.ipynb  train_prices_model_regression.ipynb  train_prices_model_transformers.ipynb
