[tool.poetry]
name = "freelance_website"
version = "0.1.0"
description = ""
authors = ["Anton Krytskyi <ant.krytskyi@gmail.coom>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
